# ad1-forensic

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  Cargo.toml  HANDOFF.md  README.md  clippy.toml  deny.toml  index.html  mkdocs.yml  release-plz.toml  renovate.json  rust-toolchain.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-plz.yml  release.yml
core/: CHANGELOG.md  Cargo.toml
core/examples/: dump_fixture.rs
core/src/: bytes.rs  lib.rs  segment.rs  testfix.rs  vfs.rs
core/tests/: malformed.rs  reader.rs  tier1_real.rs
core/tests/common/: mod.rs
decisions/: index.html
decisions/0001-build-pure-rust-ad1-reader/: index.html
decisions/0002-tiered-independent-oracle-validation/: index.html
decisions/0003-panic-free-bounded-parsing/: index.html
decisions/0004-detect-and-refuse-adcrypt/: index.html
decisions/0005-findings-via-forensicnomicon-observation/: index.html
docs/: format.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-build-pure-rust-ad1-reader.md  0002-tiered-independent-oracle-validation.md  0003-panic-free-bounded-parsing.md  0004-detect-and-refuse-adcrypt.md  0005-findings-via-forensicnomicon-observation.md  README.md
forensic/: Cargo.toml
forensic/src/: lib.rs
forensic/tests/: audit.rs
format/: index.html
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_forensic/: oom-d6324faecdd3350236b4ab8149f63d5470d9f6b4
fuzz/artifacts/fuzz_reader/: oom-f4d3b58f19d165b46ab36d766c55407c4dc5f70b
fuzz/corpus/fuzz_forensic/: sample.ad1
fuzz/fuzz_targets/: fuzz_forensic.rs  fuzz_reader.rs
privacy/: index.html
search/: search_index.json
supply-chain/: config.toml
terms/: index.html
tests/data/: README.md
validation/: index.html
