# ad1-forensic — AccessData AD1 logical-image reader (`ad1-core`) + anomaly
# auditor (`ad1-forensic`). SCAFFOLD ONLY — see HANDOFF.md for the build plan.
[workspace]
resolver = "2"
members = ["core", "forensic"]
# `fuzz` is its own workspace (cargo-fuzz convention) and needs nightly.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.1"
edition = "2021"
# Published libraries keep a low, CI-verified MSRV (a compatibility promise).
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/ad1-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]

[workspace.dependencies]
ad1-core        = { path = "core", version = "0.1.1" }
# zlib decompression of AD1 file-data chunks — flate2's default miniz_oxide
# backend is pure-Rust (NO bzip2-sys/zstd-sys/lzma-sys; keep the tree C-free).
flate2          = { version = "1", default-features = false, features = ["rust_backend"] }
thiserror       = "2"
# Shared forensic report model for `ad1-forensic` findings.
forensicnomicon = "1"
# Stored-hash recomputation (auditor) + fixture/validation ground truth.
# RustCrypto, pure-Rust — keeps the dependency tree C-free.
md-5            = "0.10"
sha1            = "0.10"
# Test-only: crafted AD1 fixtures written to a tempdir.
tempfile        = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"
suspicious  = "deny"
# Untrusted-input parser → panic-free (see HANDOFF Paranoid Gatekeeper section).
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
# pragmatic allows
module_name_repetitions  = { level = "allow", priority = 1 }
doc_markdown             = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
