[package]
name = "ad1-forensic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Forensic anomaly auditor for AccessData AD1 logical images — per-file hash verification, tree/metadata anomalies, ADCRYPT detection — as forensicnomicon report Findings."

[dependencies]
# `ad1-forensic` MAY depend on `ad1-core` OR parse the AD1 structure lower-level
# (see the fleet principle: a -forensic auditor often needs raw layout/slack that
# the -core reader normalizes away). Start on ad1-core; drop lower where needed.
ad1-core        = { workspace = true }
forensicnomicon = { workspace = true }
thiserror       = { workspace = true }

[lints]
workspace = true
